httpclient_to_httpconnection